--- a/hangman-Web/static/Hangman.css
+++ b/hangman-Web/static/Hangman.css
@@ -1,31 +1,132 @@
-/* Fixe le fond et évite qu'il se déplace lors du dézoom */
+/* CSS GENERAL */
 body {
     background-image: url("./fond-site.jpeg");
     background-size: cover;
     background-attachment: fixed;  /* Fixe l'image de fond, elle ne se déplace pas */
     background-repeat: no-repeat;
     background-position: center center;
-    font-family: 'Courier New', Courier, monospace;
     margin: 0;
     padding: 0;
     height: 100vh; /* 100% de la hauteur de la fenêtre du navigateur */
-}
+    color: white;
+    font-family: URW Chancery L, cursive;
 
+    /* Centrage avec Flexbox */
+    display: flex;
+    justify-content: center; /* Centrer horizontalement */
+    align-items: center; /* Centrer verticalement */
+    /* Centrage avec Flexbox */
+
+}
+/* Pour éviter le défilement horizontal */
 html, body {
-    overflow: hidden; /* Empêche tout défilement */
-    width: 100%; /* Fixe la largeur à 100% */
-    height: 100%; /* Fixe la hauteur à 100% */
-    zoom: 1; /* Bloque l'échelle */
-    -ms-zoom: 1; /* Pour Internet Explorer (moins utilisé maintenant) */
+    overflow-x: hidden; /* Empêche le défilement horizontal */
+}
+.TitreH {
+    font-size: xx-large;
+    color: rgb(240, 106, 106);
+}
+/* FIN CSS GENERAL
+/*--------------------------------------------------------------------------------------------------------------*/
+/*DEBUT DU CSS COMMUN ENTRE L'ACCUEIL , LA DEFAITE , ET LA VICTOIRE */
+/* Les divs */
+.Pages{
+    flex-direction: column; 
+    justify-content: center;
+    width: 100%;
+    color: white;
+    box-sizing: border-box;
+    height: 100%;
+
+    /* Centrage avec Flexbox */
+    display: flex;
+    justify-content: center; /* Centrer horizontalement */
+    align-items: center; /* Centrer verticalement */
+    /* Centrage avec Flexbox */
+
+}
+.HautDePage{
+    width: 75%;
+    height: 30%;
+    padding: 10px;
+    text-align: center;
 }
 
-/* Éléments dans la page */
-.top-text {
+.bouton-page {
+    display: flex;
+    justify-content: center;
+    width: 75%; 
+    height: 10%;
+    padding: 20px;
+    color: white;
+    box-sizing: border-box;
+}
+/* Fin des divs */
+/* Le bouton */
+.boutonPage {
+    border: 2px solid white;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     text-align: center;
+    margin-top: 5px;
+    width: 500px;
+    height: 50px;
+}
+/* Pour les messages liés à l'histoire */
+.MotsImportants {
+    font-size: xx-large;
+    color: red;
+}
+.MotsImportants2 {
+    font-size: x-large;
+    color: white;
+}
+/*FIN DU CSS COMMUN ENTRE L'ACCUEIL , LA DEFAITE , ET LA VICTOIRE */
+/*--------------------------------------------------------------------------------------------------------------*/
+/* PAGE D'ACCUEIL */
+.images-Accueil {
+    width: 60%; 
+    height: 60%; 
+    background-image: url("./home.png");
+    background-size: cover;
+    background-position: bottom;
+    background-repeat: no-repeat;
+}
+/* FIN PAGE ACCUEIL */
+/*--------------------------------------------------------------------------------------------------------------*/
+/* PAGE DE VICTOIRE */
+.images-Victoire {
+    width: 55%; 
+    height: 60%; 
+    background-image: url("./victory.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+/*FIN PAGE DE VICTOIRE */
+/*--------------------------------------------------------------------------------------------------------------*/
+/* PAGE DE DEFAITE */
+.images-Defaite {
+    width: 55%; 
+    height: 60%; 
+    background-image: url("./gameover.png");
+    background-size: cover;
+    background-position: top;
+    background-repeat: no-repeat;
+}
+/* FIN PAGE DE DEFAITE */
+/*--------------------------------------------------------------------------------------------------------------*/
+/* CSS COMMUN ENTRE VICTOIRE , DEFAITE , ET JEU */
+
+.InformationsImportantes {
+    font-size: xx-large;
     color: white;
 }
 
-/* Structure des blocs */
+/* FIN CSS COMMUN ENTRE VICTOIRE ET DEFAITE */
+/*--------------------------------------------------------------------------------------------------------------*/
+/*PAGE DE JEU */
+
 .blocks {
     display: flex;
     justify-content: center;
@@ -35,9 +136,8 @@ html, body {
     color: white;
     box-sizing: border-box;
 }
-
-/* La div présentation du projet */
-.presentation-du-projet {
+/* La div des regles */
+.Regles {
     width: 30%;
     padding: 10px;
     border: 5px solid white;
@@ -51,7 +151,6 @@ html, body {
     background-repeat: no-repeat;
     height: 700px;
 }
-
 /* Div contenant le formulaire du jeu */
 .jeu {
     width: 50%;
@@ -68,8 +167,59 @@ html, body {
     background-repeat: no-repeat;
     height: 700px;
 }
+/* TITRE */
+.Titre {
+    font-size: xx-large;
+}
+/* INFORMATIONS IMPORTANTES */
+.InformationsImportantes2 {
+    font-size: x-large;
+    color: white;
+}
+/* Affichage du pendu */
+.affichage-pendu {
+    width: auto;
+    height: 375px;
+    text-align:center;
+    background-image: url(./listes-fond.jpg);
+    border: 5px solid white;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    flex-direction: column; 
 
+    /* Centrage avec Flexbox */
+    display: flex;
+    justify-content: top; /* Centrer horizontalement */
+    align-items: center; /* Centrer verticalement */
+    /* Centrage avec Flexbox */
+
+}
+.pendu {
+    font-weight: bold;
+    white-space: pre; /* Important pour conserver la mise en forme du pendu */
+    text-align: left;
+    margin-left:10px;
+    margin-top: -40px;
+    font-size: x-large;
+}
+/* Pour l'input du texte */
+input[type="text"] {
+    width: 50%;
+    padding: 8px;
+    margin-top: 50px;
+}
+/* Style pour les boutons */
+.boutons {
+    border: 2px solid white;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    margin-top: 5px;
+}
 /* Liste des lettres et mots */
+.ListeUl {
+    font-size: x-large;
+}
 .listes {
     display: flex;
     justify-content: center;
@@ -81,7 +231,7 @@ html, body {
     margin-left: 10px;
     height: 730px;
 }
-
+/* Styles pour les listes de lettres et de mots */
 .liste-lettres, .liste-mots {
     width: 100%;
     border: 5px solid white;
@@ -94,28 +244,14 @@ html, body {
     background-repeat: no-repeat;
     height: 50%;
 }
-.liste-lettres{
+.liste-lettres {
     margin-top: 0px;
     margin-bottom: 10px;
 }
-.liste-mots{
+.liste-mots {
     margin-top: 10px;
     margin-bottom: 0px;
 }
+/* FIN PAGE DE JEU */
+/*--------------------------------------------------------------------------------------------------------------*/
 
-/* Pour l'input du texte */
-input[type="text"] {
-    width: 50%;
-    padding: 8px;
-    margin-top: 8px;
-}
-.gauche {
-    text-align: left;
-}
-.boutons {
-    border: 2px solid white;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    margin-top: 5px;
-}
