--- a/hangman-Web/templates/Perdu.page.tmpl
+++ b/hangman-Web/templates/Perdu.page.tmpl
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Defaite</title>
-    <link rel="stylesheet" href="/static/Hangman.css">
+    <link rel="stylesheet" href="/static/Hangman.css?v=2">
 </head>
 <body>
     <div class="Pages"> <!--classe pour la page-->
