--- a/hangman-Web/templates/Jeu.page.tmpl
+++ b/hangman-Web/templates/Jeu.page.tmpl
@@ -30,8 +30,8 @@
 
         <div class="jeu">
             <h1 class="Titre">Jeu du Pendu</h1>
-            <p class="InformationsImportantes2">
-                Mot à deviner : {{.MotCacherStr}}<br><br>
+            <p class="InformationsImportantes3">
+                {{.MotCacherStr}}<br><br>
                 ❤️ Vies restantes : {{.Vies}}
             </p>
             <div class="affichage-pendu">
